Issue #352 -  resource names are almost always truncated

--- a/src/app/applications/components/application-resources-tree/application-resources-tree.scss
+++ b/src/app/applications/components/application-resources-tree/application-resources-tree.scss
@@ -97,6 +97,7 @@
 
     &__node-title {
         line-height: 52px;
+        font-size: 0.8em;
     }
 
     &__node-status-icon {
